fix: adapted implementations to byte[]